--- a/books/views/index.ejs
+++ b/books/views/index.ejs
@@ -1,10 +1,21 @@
 
 <% include partials/header %>
 
+<!DOCTYPE html>
+<html>
 
   <body>
-    
+
     <h1><%= title %></h1>
     <p>Your Personal Reading List Organized!</p>
+
+     <a href="/add" class="btn btn-primary">Add a New Book</a>
+     <br><br>
+    <a href="/books" class="btn btn-secondary">View My Books</a>
+
   </body>
+
 </html>
+
+ 
+
