--- a/books/views/books.ejs
+++ b/books/views/books.ejs
@@ -49,8 +49,13 @@
 
                     </table>
                 </div>
+
             </div>
         </main>
 
     </body> 
+
+
+
+    <% include partials/footer %>
 
