--- a/books/views/partials/footer.ejs
+++ b/books/views/partials/footer.ejs
@@ -1,27 +1,22 @@
 <html>  
-  
+
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' />
-    <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' />
-    
-    <script src='/jquery/dist/jquery.min.js'></script>
-    <script src='/bootstrap/dist/js/bootstrap.bundle.min.js'></script>
-    
+    <title><%= title %></title> <!-- Page title -->
+    <link rel='stylesheet' href='/stylesheets/style.css' /> <!-- Custom CSS -->
+    <link rel='stylesheet' href='/bootstrap/dist/css/bootstrap.min.css' /> <!-- Bootstrap CSS -->
+    <link rel='stylesheet' href='/@fortawesome/fontawesome-free/css/all.min.css' /> <!-- Icons -->
+    <script src='/jquery/dist/jquery.min.js'></script> <!-- jQuery -->
+    <script src='/bootstrap/dist/js/bootstrap.bundle.min.js'></script> <!-- Bootstrap JS -->
   </head>
 
-<footer>
-  <nav class="navbar fixed-bottom navbar-expand-lg  navbar-light" style="background-color: #712e2e6b;">
-    <p class="card-text text-white">&copy; 2025 Made By Fatimah Kamal</p>
-    <div class="me-3 ms-auto">
-      <a href="https://www.linkedin.com/in/fatimah-kamal/" class="btn btn-primary">LinkedIn</a>
-      <a href="https://github.com/fatimahK-cyber" class="btn btn-primary">GitHub</a>
-    </div>  
-  </div>
-  </nav>
-</footer>
+  <footer>
+    <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: #712e2e6b;">
+      <p class="card-text text-white">&copy; 2025 Made By Fatimah Kamal</p> <!-- Footer text -->
+      <div class="me-3 ms-auto">
+        <a href="https://www.linkedin.com/in/fatimah-kamal/" class="btn btn-primary">LinkedIn</a>
+        <a href="https://github.com/fatimahK-cyber" class="btn btn-primary">GitHub</a>
+      </div>  
+    </nav>
+  </footer>
 
 </html>
-
-
