--- a/books/views/authentication/login.ejs
+++ b/books/views/authentication/login.ejs
@@ -1,41 +1,48 @@
 <% include ../partials/header %>
 
-<main class="container">
-    <% if(message.length > 0) { %>
-        <div class="alert alter danger">
+<main class="container mt-5">
+    <% if (message && message.length > 0) { %>
+        <div class="alert alert-danger">
             <%= message %>
         </div>
-    <%}%>
+    <% } %>
 
-    <div class="row ">
+    <div class="row justify-content-center">
         <div class="col-md-6">
             <h2 class="text-center mb-4">Please Login</h2>
-            <form autocomplete="off"  method="POST">
-                <fieldset class="form-group">
+
+            <!-- Local login form -->
+            <form autocomplete="off" method="POST">
+                <fieldset class="form-group mb-3">
                     <label for="username">Username</label>
                     <input type="text" class="form-control" id="username" name="username" 
                     placeholder="Enter your username" required autofocus>
                 </fieldset>
 
-                <fieldset class="form-group">
+                <fieldset class="form-group mb-3">
                     <label for="password">Password</label>
                     <input type="password" class="form-control" id="password" name="password" 
-                    placeholder="Enter your password" required autofocus>
-
-                    <br>
-                    <a href="/register" class="btn ">Or Register Here</a>
-
+                    placeholder="Enter your password" required>
                 </fieldset>
 
-                 <fieldset class="form-group text-center">
+                <fieldset class="form-group text-center mb-3">
                     <input type="submit" class="btn btn-primary btn-block" value="Login">
-                    <a href="/"></a>
-
-                    <input type="button" class="btn btn-warning" value="Cancel">
-                    <a href="/"></a>
+                    <a href="/" class="btn btn-warning">Cancel</a>
                 </fieldset>
             </form>
 
+            <div class="text-center mb-3">
+                <a href="/register" class="btn btn-secondary">Or Register Here</a>
+            </div>
+
+            <!-- Google login -->
+            <div class="text-center">
+                <a href="/auth/google" class="btn btn-danger">
+                    <i class="fab fa-google"></i> Login with Google
+                </a>
+            </div>
+        </div>
+    </div>
 </main>
 
 <% include ../partials/footer %>
