--- a/books/views/authentication/login.ejs
+++ b/books/views/authentication/login.ejs
@@ -41,6 +41,15 @@
                     <i class="fab fa-google"></i> Login with Google
                 </a>
             </div>
+
+            <div class="text-center">
+                <a href="/auth/github" class="btn btn-dark btn-block">
+                    <i class="fab fa-github"></i> Login with GitHub
+                </a>
+            </div>
+
+             <!-- GitHub Login -->
+      
         </div>
     </div>
 </main>
