--- a/books/views/books.ejs
+++ b/books/views/books.ejs
@@ -33,7 +33,7 @@
                                 <td class="text center col-2"><%= bookList[count].review %></td>
                                 
                                 <td class="text center col-1">
-                                <a href = "/books/edit/<%= bookList[count]._id %>" class="btn btn-primary btn-sm m-1">Edit</a>
+                                <a href = "/books/edit/<%= bookList[count]._id %>" class="btn btn-secondary btn-sm m-1">Edit</a>
                                 </td>   
 
                                 <td class="text center col-1">
