--- a/books/views/index.ejs
+++ b/books/views/index.ejs
@@ -10,7 +10,7 @@
 <% } %>
 
 <% if (displayName) { %>
-  <a href="/books" class="btn btn-secondary">View My Books</a>
+  <a href="/books" class="btn btn-secondary" id = "newbook">View My Books</a>
 <% } else { %>
   <a href="/login" class="btn btn-secondary">Login to View Your Books</a>
 <% } %>
