--- a/books/views/partials/footer.ejs
+++ b/books/views/partials/footer.ejs
@@ -13,8 +13,8 @@
     <nav class="navbar fixed-bottom navbar-expand-lg navbar-light" style="background-color: #712e2e6b;">
       <p class="card-text text-white">&copy; 2025 Made By Fatimah Kamal</p> <!-- Footer text -->
       <div class="me-3 ms-auto">
-        <a href="https://www.linkedin.com/in/fatimah-kamal/" class="btn btn-primary">LinkedIn</a>
-        <a href="https://github.com/fatimahK-cyber" class="btn btn-primary">GitHub</a>
+        <a href="https://www.linkedin.com/in/fatimah-kamal/" class="btn btn-secondary">LinkedIn</a>
+        <a href="https://github.com/fatimahK-cyber" class="btn btn-secondary">GitHub</a>
       </div>  
     </nav>
   </footer>
