updated index page

--- a/books/public/stylesheets/style.css
+++ b/books/public/stylesheets/style.css
@@ -26,3 +26,11 @@ a {
   background-color: #712e2e6b;
   border-color: #712e2e6b;
 }
+
+
+#newbooklogin 
+{
+  padding: 10px 20px;
+  background-color: #712e2e6b;
+  border-color: #712e2e6b;
+}
